--- a/src/app/posts/answer-form/answer-form.component.html
+++ b/src/app/posts/answer-form/answer-form.component.html
@@ -1,13 +1,13 @@
 <nz-card style="margin-bottom:25px;">
   <div nz-row class="card-user-info">
     <div nz-col nzSpan="2">
-      <nz-avatar nzIcon="anticon anticon-user" nzSrc="https://cdn.hashnode.com/res/hashnode/image/upload/w_70,h_70,c_thumb/v1532830409603/ByG0zjq4m.jpeg"></nz-avatar>
+      <nz-avatar nzIcon="anticon anticon-user" [nzSrc]="currentUser.avatar.thumb.url"></nz-avatar>
     </div>
     <div nz-col nzXl="8">
       <a>
-        <p class="card-user-name">Malik Jaquan</p>
+        <p class="card-user-name">{{currentUser.first_name}} {{currentUser.last_name}}</p>
       </a>
-      <span>Software developer Charisol</span>
+      <span>@{{currentUser.username}}</span>
     </div>
   </div>
   <form nz-form [formGroup]="answerForm" class="login-form" (ngSubmit)="submitForm()">
