--- a/src/app/posts/posts.component.html
+++ b/src/app/posts/posts.component.html
@@ -38,7 +38,7 @@
 
 
             <div nz-col nzSpan="12" style="text-align: right;">
-              <nz-dropdown>
+              <!-- <nz-dropdown>
                 <a href="#" class="remove-border" nz-button nz-dropdown>
                   <i class="anticon anticon-down"></i>More</a>
                 <ul nz-menu>
@@ -55,11 +55,11 @@
                       <i class="anticon anticon-exclamation-circle-o"></i> Report</a>
                   </li>
                 </ul>
-              </nz-dropdown>
-              <a href="#" class="remove-border" nz-button>
-                <i class="anticon anticon-book"></i> Save</a>
-              <a href="#" class="remove-border" nz-button>
-                <i class="anticon anticon-share-alt"></i> Share</a>
+              </nz-dropdown> -->
+              
+              <button href="#" class="remove-border" nz-button (click)="favouritePost(post)"><i 
+                [ngClass]="favourite? 'anticon anticon-heart red' : 'anticon anticon-heart-o'"></i> Favorite</button>
+              <a href="#" class="remove-border" nz-button><i class="anticon anticon-share-alt"></i> Share</a>
             </div>
           </div>
 
