--- a/src/app/posts/posts.component.html
+++ b/src/app/posts/posts.component.html
@@ -56,10 +56,11 @@
                   </li>
                 </ul>
               </nz-dropdown> -->
-              
-              <button href="#" class="remove-border" nz-button (click)="favouritePost(post)"><i 
-                [ngClass]="favourite? 'anticon anticon-heart red' : 'anticon anticon-heart-o'"></i> Favorite</button>
-              <a href="#" class="remove-border" nz-button><i class="anticon anticon-share-alt"></i> Share</a>
+
+              <button  class="remove-border" nz-button (click)="favouritePost(post)">
+                <i [ngClass]="favourite? 'anticon anticon-heart red' : 'anticon anticon-heart-o'"></i> Favorite</button>
+              <button (click)="toggleShare()" class="remove-border" nz-button>
+                <i class="anticon anticon-share-alt"></i> Share</button>
             </div>
           </div>
 
@@ -68,6 +69,9 @@
             <app-comments *ngIf="post?.question?.id" [slug]="post?.question?.id" commentableType="Question"></app-comments>
             <app-comment-form *ngIf="post?.question?.id" [slug]="post?.question?.id" commentableType="Question"></app-comment-form>
           </div>
+
+          <app-share-post [hidden]="!sharePost" *ngIf="post?.question?.id" [title]="post?.question?.name" [postUrL]="postUrL" postType="Question"></app-share-post>
+
         </nz-card>
 
         <app-answer-form *ngIf="post?.question?.id" [questionId]="post?.question?.id"></app-answer-form>
