--- a/src/app/posts/answers/answers.component.html
+++ b/src/app/posts/answers/answers.component.html
@@ -1,4 +1,4 @@
-<nz-divider nzText="Answers" *ngIf="allanswers.length > 0"></nz-divider>
+<nz-divider *ngIf="allanswers.length > 0" nzText="Answers" ></nz-divider>
 <div *ngFor="let answer of allanswers" infiniteScroll [infiniteScrollDistance]="2" [infiniteScrollThrottle]="50" (scrolled)="onScroll(pageMeta.next_page)">
   <nz-card style="margin-bottom:25px;" [attr.id]="'answer-' + answer?.id" >
     <div nz-row class="card-user-info">
@@ -18,9 +18,12 @@
 
     <div class="answer-body-text" markdown [data]="answer?.body"></div>
     <div nz-row nzGutter="48" class="post-action-bar">
-      <div nz-col nzSpan="12">
-        <button nz-button class="remove-border" nzType="primary" [nzSize]="large">
-          <i class="anticon anticon-like"></i> Like</button>
+      <div nz-col nzSpan="15">
+      <button nz-button class="remove-border" nzType="default" [nzSize]="large" (click)="toggleComment()">
+        <i class="fa fa-arrow-up"></i> Upvote {{answer?.vote_count}}</button>
+        <button nz-button class="remove-border" nzType="default" [nzSize]="large" (click)="toggleComment()">
+          <i class="fa fa-arrow-down"></i> Downvote</button>
+
         <button nz-button class="remove-border" nzType="default" [nzSize]="large">
           <i class="anticon anticon-message"></i> reply ({{answer?.comments_count}})</button>
         <!-- <button nz-button class="remove-border" nzType="default" [nzSize]="large">
@@ -28,10 +31,11 @@
       </div>
 
 
-      <div nz-col nzSpan="12" style="text-align: right;">
-        <nz-dropdown>
-          <a href="#" class="remove-border" nz-button nz-dropdown>
-            <i class="anticon anticon-down"></i>More</a>
+      <div nz-col nzSpan="16" style="text-align: right;">
+        <nz-dropdown *ngIf="currentUser && currentUser.id == answer?.author?.id">
+          <button class="remove-border" nzSize="large" nz-button nz-dropdown nz-tooltip nzTitle="More">
+            <i class="fas fa-ellipsis-h"></i>
+          </button>
           <ul nz-menu>
             <li nz-menu-item (click)="editAnswer(answer)">
               <a>
@@ -41,7 +45,7 @@
               <a>
                 <i class="anticon anticon-delete"></i> Delete</a>
             </li>
-            <li nz-menu-item>
+            <!-- <li nz-menu-item>
               <a>
                 <i class="anticon anticon-message"></i> Invite to answer</a>
             </li>
@@ -52,13 +56,13 @@
             <li nz-menu-item>
               <a>
                 <i class="anticon anticon-exclamation-circle-o"></i> Report</a>
-            </li>
+            </li> -->
           </ul>
         </nz-dropdown>
-        <a href="#" class="remove-border" nz-button>
+        <!-- <a href="#" class="remove-border" nz-button>
           <i class="anticon anticon-book"></i> Save</a>
         <a href="#" class="remove-border" nz-button>
-          <i class="anticon anticon-share-alt"></i> Share</a>
+          <i class="anticon anticon-share-alt"></i> Share</a> -->
       </div>
     </div>
 
@@ -70,13 +74,13 @@
   <nz-card style="margin-bottom:25px; display: none" [attr.id]="'answer-update-form-' + answer?.id" [nzLoading]="loading">
     <div nz-row class="card-user-info">
       <div nz-col nzSpan="2">
-        <nz-avatar nzIcon="anticon anticon-user" nzSrc="https://cdn.hashnode.com/res/hashnode/image/upload/w_70,h_70,c_thumb/v1532830409603/ByG0zjq4m.jpeg"></nz-avatar>
+        <nz-avatar nzIcon="anticon anticon-user" [nzSrc]="currentUser?.avatar?.thumb?.url"></nz-avatar>
       </div>
       <div nz-col nzXl="8">
         <a>
-          <p class="card-user-name">Malik Jaquan</p>
+          <p class="card-user-name">{{currentUser?.first_name}} {{currentUser?.last_name}}</p>
         </a>
-        <span>Software developer Charisol</span>
+        <span>@{{currentUser?.username}}</span>
       </div>
     </div>
     <form nz-form [formGroup]="updateForm" (ngSubmit)="submitForm(answer)">
