--- a/src/app/posts/posts.component.html
+++ b/src/app/posts/posts.component.html
@@ -23,60 +23,9 @@
           </div>
 
           <h2 class="post-title">{{post?.question?.name}}</h2>
-          <!-- <div class="post-body" markdown [data]="post?.question?.body"></div> -->
-          <div class="post-body"  [innerHTML]="post?.question?.body  | markdown"></div>
+          <div class="post-body" [innerHTML]="post?.question?.body  | markdown"></div>
 
-          <div nz-row nzGutter="48" class="post-action-bar">
-            <div nz-col nzSpan="15">
-
-              <button nz-button class="remove-border" nzType="default" [nzSize]="large" (click)="upvote()">
-                <i class="fa fa-arrow-up"></i> Upvote {{post?.question?.vote_count}}</button>
-                <button nz-button class="remove-border" nzType="default" [nzSize]="large" (click)="downvote()">
-                  <i class="fa fa-arrow-down"></i> Downvote</button>
-
-              <button nz-button class="remove-border" nzType="default" [nzSize]="large" (click)="toggleComment()" nz-tooltip nzTitle="Unable to understand the question? ask for more info.">
-                <i class="fa fa-reply"></i> Ask details ({{post?.question?.comments_count}})</button>
-              <!-- <button nz-button class="remove-border" nzType="default" [nzSize]="large">
-                  <i class="anticon anticon-plus-circle-o"></i> Follow </button> -->
-            </div>
-
-            <div nz-col nzSpan="9" style="text-align: right;">
-              <nz-dropdown *ngIf="currentUser && currentUser.id == post?.author?.id">
-                <button class="remove-border" nzSize="large" nz-button nz-dropdown nz-tooltip nzTitle="More">
-                  <i class="fas fa-ellipsis-h"></i>
-                </button>
-                <ul nz-menu>
-                    <li nz-menu-item>
-                      <a>
-                        <i class="fa fa-edit"></i> Edit </a>
-                    </li>
-                    <li nz-menu-item>
-                      <a>
-                        <i class="fa fa-trash-alt"></i> Delete Post </a>
-                    </li>   
-                  <!-- <li nz-menu-item>
-                    <a>
-                      <i class="anticon anticon-message"></i> Invite to answer</a>
-                  </li>
-                  <li nz-menu-item>
-                    <a>
-                      <i class="anticon anticon-dashboard"></i> Post Activities</a>
-                  </li>
-                  <li nz-menu-item>
-                    <a>
-                      <i class="anticon anticon-exclamation-circle-o"></i> Report</a>
-                  </li> -->
-                </ul>
-              </nz-dropdown>
-
-              <button class="remove-border" nzSize="large" nz-button (click)="favouritePost(post)" nz-tooltip nzTitle="Favorite">
-                <i [ngClass]="favourite? 'anticon anticon-heart red' : 'anticon anticon-heart-o'"></i>
-              </button>
-              <button (click)="toggleShare()" nzSize="large" class="remove-border" nz-button nz-tooltip nzTitle="Share">
-                <i class="anticon anticon-share-alt"></i>
-              </button>
-            </div>
-          </div>
+          <app-post-action-bar *ngIf="post?.question" [post]="post?.question" postType="question" [componentName]="componentName"></app-post-action-bar>
 
 
           <div class="comment" [hidden]="!showComment">
