--- a/src/styles.css
+++ b/src/styles.css
@@ -10,3 +10,6 @@ app-home {
   height: 100% !important;
 }
 
+
+html, body { height: 100%; }
+body { margin: 0; font-family: 'Roboto', sans-serif; }
