feat(): add route loading navigator

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,1 +1,9 @@
+.mat-sidenav {
+    width: 250px;
+    margin-right: 10px;
+  
+  }
 
+  .mat-drawer-container {
+    background-color: #e1e4f2;
+  }
