--- a/src/app/posts/answers/answers.component.html
+++ b/src/app/posts/answers/answers.component.html
@@ -19,7 +19,7 @@
     <div class="answer-body-text" markdown [data]="answer?.body"></div>
     <div nz-row nzGutter="48" class="post-action-bar">
   
-      <app-post-action-bar  [post]="answer" postType="answer" [componentName]='componentName'></app-post-action-bar>
+      <!-- <app-post-action-bar  [post]="answer" postType="answer" [componentName]='componentName'></app-post-action-bar> -->
 
 
       <div nz-col nzSpan="16" style="text-align: right;">
