--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,15 @@
-<nz-layout>
+<ng-progress #progressBar [meteor]="options.meteor" [color]="options.color" [min]="options.min" [speed]="options.speed" [spinner]="options.spinner" [max]="options.max"
+[spinnerPosition]="options.spinnerPosition" [direction]="options.direction" [thick]="options.thick" [trickleSpeed]="options.trickleSpeed"
+[ease]="options.ease">
+</ng-progress>
+
+<mat-sidenav-container>
+  <mat-sidenav #drawer class="sidenav" fixedInViewport="true" [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
+    [mode]="(isHandset$ | async) ? 'over' : 'side'" [opened]="!(isHandset$ | async)">
+    <app-sidebar></app-sidebar>
+  </mat-sidenav>
+  <mat-sidenav-content class="sidenav-container">
+    <app-header></app-header>
     <router-outlet></router-outlet>
-</nz-layout>
+  </mat-sidenav-content>
+</mat-sidenav-container>
