--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<nz-layout>
+<!-- <nz-layout>
   <nz-sider>
     <app-sidebar></app-sidebar>
   </nz-sider>
@@ -27,7 +27,6 @@
           </a>
           <p>{{feed?.body}}</p>
           <div nz-row nzGutter="48">
-            <app-post-action-bar  [post]="feed" postType="question" [componentName]='componentName'></app-post-action-bar>
             <app-share-post [hidden]="!feed.sharePost" *ngIf="feed?.id" [title]="feed?.name" [postUrL]="postUrL+'posts/'+ feed?.slug" postType="Question"></app-share-post>
           </div>
         </nz-card>
@@ -49,4 +48,47 @@
     </div>
 
   </nz-content>
-</nz-layout>
+</nz-layout> -->
+
+
+<div fxLayout="row" fxLayoutGap="20px" fxLayout.xs="column" class="margin-top2">
+    <div fxFlex="45" fxLayout="column" fxLayoutGap="30px">
+      <mat-card class="example-card" *ngFor="let feed of feeds" style="margin-bottom: 20px" infiniteScroll [infiniteScrollDistance]="5"
+        [infiniteScrollThrottle]="50" (scrolled)="onScroll(meta?.next_page)">
+        <div class="row" fxFlexAlign="start">
+          <mat-card-header fxFlex="50">
+            <div mat-card-avatar [ngStyle]="{'background-image': 'url(' + feed?.author?.avatar?.thumb.url+ ')', 'background-size': 'cover'}"></div>
+            <mat-card-title>{{feed?.author?.full_name}}</mat-card-title>
+            <mat-card-subtitle>@{{feed?.author?.slug}}</mat-card-subtitle>
+          </mat-card-header>
+
+          <div fxFlex="50" style="text-align: right">
+            <small>{{feed?.created_at | amTimeAgo}}</small>
+          </div>
+        </div>
+
+
+        <mat-card-content>
+          <h2 [routerLink]="['posts', feed.slug ]" class="title">
+            <a class="post-link">{{feed?.name}}</a>
+          </h2>
+          <p class="body-2">{{feed?.body}}</p>
+        </mat-card-content>
+       
+
+        <mat-card-actions app-post-action-bar fxLayout="row" [post]="feed" postType="question" [componentName]='componentName'> </mat-card-actions>
+        <div *ngIf="feed.sharePost"><app-share-post  *ngIf="feed?.id"  [title]="feed?.name" [postUrL]="postUrL+'posts/'+ feed?.slug" postType="Question"></app-share-post></div>
+      </mat-card>
+    </div>
+    <div fxFlex="25">
+      <mat-card class="example-card">
+        <mat-card-content>
+          <p>
+            The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan. A small, agile dog that copes
+            very well with mountainous terrain, the Shiba Inu was originally bred for hunting.
+          </p>
+        </mat-card-content>
+      </mat-card>
+    </div>
+
+  </div>
