--- a/src/app/posts/posts.component.css
+++ b/src/app/posts/posts.component.css
@@ -1,38 +1,6 @@
-.ant-layout {
-  background-color: #e1e4f2;
-}
-
-.ant-layout-sider {
-  transition: all .2s;
-  position: relative;
-  background: #ffffff;
-  min-width: 0;
-  width: 250px !important;
-  min-width: 250px !important;
-  max-width: 250px !important;
-}
 
 
-.card-user-name {
-  margin-bottom: 0px;
-  line-height: 1;
-  color: black;
-  font-weight: bolder;
-}
 
-.card-user-info {
-  margin-bottom: 15px;
-}
-
-
-[nz-button] {
-  margin-right: 15px;
-  font-weight: bolder;
-}
-
-.remove-border {
-  border: none;
-}
 
 .post-title {
   font-size: 30px;
@@ -53,18 +21,50 @@
    margin-top: 25px;
  }
 
-.answer-form-action-button {
-   float: right;
-   margin: 10px 0px !important;
- }
 
- .question-date {
-   float: right;
- }
 
- .red {
-   color: #ff0000;
- }
+
+.mat-toolbar.mat-primary {
+  position: sticky;
+  top: 0;
+}
+
+.sidenav-container {
+  position: relative;
+  background: #e1e4f1;
+}
+
+.mat-sidenav {
+  width: 250px;
+  margin-right: 10px;
+}
+
+
+
+.margin-top2 {
+  margin-top: 66px;
+  padding: 20px;
+}
+
+.post-link {
+  color: rgba(0,0,0,0.87);
+  font-size: 25px;
+  font-weight: bold;
+  line-height: 28px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
+  display: -webkit-box;
+  max-height: 56px;
+  text-decoration: none;
+}
+
+.mat-card-title {
+  display: block;
+  margin-bottom: 8px;
+}
+
  
 
 
